# telegrinder_templating

./: LICENSE  README.md  pyproject.toml
telegrinder_templating/: jinja.py
